--- a/PROGA/lab8/client/src/main/resources/fxml/Main.fxml
+++ b/PROGA/lab8/client/src/main/resources/fxml/Main.fxml
@@ -5,21 +5,17 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.TextField?>
-<BorderPane fx:id="rootPane"
-            xmlns="http://javafx.com/javafx/16"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lab6.ui.controllers.MainController"
-            styleClass="rootPane">
+<?import javafx.scene.control.CheckBox?>
+<VBox fx:id="rootPane"
+      xmlns="http://javafx.com/javafx/16"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="lab6.ui.controllers.MainController"
+      styleClass="rootPane">
     <stylesheets>
         <URL value="@/css/main.css"/>
     </stylesheets>
-    <top>
         <fx:include source="components/Header.fxml"/>
-    </top>
-    <center>
-        <VBox styleClass="container">
+        <VBox styleClass="tableView" VBox.vgrow="ALWAYS">
             <fx:include source="components/TableView.fxml"/>
         </VBox>
-    </center>
-</BorderPane>
+</VBox>
