--- a/PROGA/lab8/client/src/main/resources/css/form.css
+++ b/PROGA/lab8/client/src/main/resources/css/form.css
@@ -1,13 +1,56 @@
-.form{
-    -fx-pref-width: 400px;
-    -fx-max-width: -fx-pref-width;
-
+.auth-form-card {
     -fx-alignment: center;
-    -fx-spacing: 20px;
-    -fx-padding: 18px;
-
-    -fx-border-width: 1px;
-    -fx-border-radius: 16px;
-
+    -fx-spacing: 30px;
+     -fx-padding: 80px 40px 40px 40px;
+    -fx-background-color: white;
     -fx-background-radius: 16px;
+    -fx-border-radius: 16px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.15), 20, 0, 0, 5);
+}
+
+.form-title {
+    -fx-font-size: 28pt;
+    -fx-font-weight: bold;
+    -fx-text-fill: -fx-text-primary;
+    -fx-alignment: center;
+}
+
+.first-form-field-group {
+    -fx-padding: 60px 0 0 0;
+}
+
+.title-separator {
+    -fx-background-color: -fx-accent-highlight;
+    -fx-pref-height: 1px;
+    -fx-max-height: 1px;
+
+    -fx-pref-width: 300px;
+    -fx-max-width: 300px;
+}
+
+.form-field-group {
+    -fx-spacing: 8px;
+}
+
+
+.form-label {
+    -fx-font-size: 12pt;
+    -fx-text-fill: -fx-accent-secondary;
+    -fx-font-weight: normal;
+}
+
+.text-field {
+    -fx-font-size: 12pt;
+    -fx-pref-height: 45px;
+    -fx-background-radius: 8px;
+    -fx-border-radius: 8px;
+    -fx-border-width: 1px;
+    -fx-border-color: -fx-accent-highlight;
+    -fx-background-color: -fx-background-main;
+}
+
+.text-field:focused {
+    -fx-border-color: -fx-accent-primary;
+    -fx-border-width: 1px;
+    -fx-effect: dropshadow(gaussian, -fx-accent-highlight, 10, 0, 0, 0);
 }
