--- a/PROGA/lab8/client/src/main/resources/fxml/User.fxml
+++ b/PROGA/lab8/client/src/main/resources/fxml/User.fxml
@@ -9,20 +9,20 @@
 <BorderPane fx:id="rootPane"
             xmlns="http://javafx.com/javafx/16"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="lab6.ui.controllers.AuthController"
+            fx:controller="lab6.ui.controllers.UserController"
             styleClass="rootPane">
     <stylesheets>
         <URL value="@/css/main.css"/>
+        <URL value="@/css/form.css"/>
     </stylesheets>
     <top>
         <fx:include source="components/Header.fxml"/>
     </top>
     <center>
         <VBox styleClass="container">
-            <Label fx:id="modeLabel" styleClass="boldLabel" text="User"></Label>
-            <stylesheets>
-                <URL value="@/css/form.css"/>
-            </stylesheets>
+            <Label fx:id="userName" styleClass="boldLabel" text="User"></Label>
+            <Button fx:id="logOut" styleClass="button" text="%button.logOut" onAction="#out"/>
+            <Button fx:id="deleteAccount" styleClass="button" text="%button.deleteAccount" onAction="#deleteAccount"/>
             <fx:include source="components/BackButton.fxml"/>
         </VBox>
     </center>
